; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_indexer.c_hash_header.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_indexer.c_hash_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i32)* @hash_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hash_header(i32* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca [64 x i8], align 16
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = getelementptr inbounds [64 x i8], [64 x i8]* %8, i64 0, i64 0
  %12 = load i64, i64* %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @git_odb__format_object_header(i64* %9, i8* %11, i32 64, i64 %12, i32 %13)
  store i32 %14, i32* %10, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* %10, align 4
  store i32 %17, i32* %4, align 4
  br label %23

18:                                               ; preds = %3
  %19 = load i32*, i32** %5, align 8
  %20 = getelementptr inbounds [64 x i8], [64 x i8]* %8, i64 0, i64 0
  %21 = load i64, i64* %9, align 8
  %22 = call i32 @git_hash_update(i32* %19, i8* %20, i64 %21)
  store i32 %22, i32* %4, align 4
  br label %23

23:                                               ; preds = %18, %16
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i32 @git_odb__format_object_header(i64*, i8*, i32, i64, i32) #1

declare dso_local i32 @git_hash_update(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
